<resources>
    <string name="app_name">Bazar</string>

    <!-- Inicio -->
    <string name="inicio_boton_login"> Log in </string>
    <string name="inicio_boton_crearcuenta"> Sing Up </string>
    <string name="inicio_titulo"> WELCOME TO BAZAR </string>
    <!-- Crear Usuario -->
    <string name="crear_cuenta_titulo">Crear nueva cuenta</string>
    <string name="crear_cuenta_nombre_completo">  Nombre Completo</string>
    <string name="crear_cuenta_telefono">  Telefono</string>
    <string name="crear_cuenta_email">  Email</string>
    <string name="crear_cuenta_password">  Password</string>
    <string name="crear_cuenta_boton_crear">Sing Up</string>
    <!-- Menu Principal -->
    <string name="menu_titulo">¿Que quieres hacer hoy?</string>
    <string name="menu_boton_comprar">Comprar</string>
    <string name="menu_boton_vender">Vender</string>
    <string name="menu_boton_acercaDe">  Acerca De</string>
    <!--Login -->
    <string name="texto_login"> SIGN IN </string>
    <string name="prompt_email_login"> Email </string>
    <string name="prompt_contrasenia_login"> Contraseña </string>
    <!-- Vender un producto -->
    <string name="vender_titulo">Vender Producto</string>
    <string name="vender_nombre">  Titulo de la prenda</string>
    <string name="vender_marca">  Marca</string>
    <string name="vender_categoria">  Categoria</string>
    <string name="vender_precio">  Precio</string>
    <string name="vender_boton">  Vender</string>
    <!-- Ver mis producto s-->
    <string name="ver_misp_titulo">Datos del Producto</string>
    <string name="etiqueta_nombre_producto">Nombre:</string>
    <string name="etiqueta_categoria_producto">Categoria:</string>
    <string name="etiqueta_marca_producto">Marca:</string>
    <string name="etiqueta_precio_producto">Precio:</string>
    <!-- Ver mis producto menu-->
    <string name="item_Compartir"> Compartir </string>
    <string name="item_limpiar"> Limpiar </string>
    <string name="item_siguiente"> Siguiente </string>
    <string name="title_activity_visor_imagen">VisorImagen</string>
    <!-- Carrusel-->
    <string name="page1"> Somos una feria virtual de la moda sustentable. Conectamos a amantes de la moda que desean compartir su estilo personal, ofreciendo prendas y accesorios y previamente amados. Nuestra plataforma te permite vender tus piezas de moda usadas y al mismo tiempo, explorar una amplia selección de artículos que reflejan el estilo de otros usuarios. Únete a nuestra comunidad y da nueva vida a la moda vintage y contemporánea con Bazar. </string>
    <string name="page2">  Nuestra historia comienza con una pasión compartida por la moda, la sostenibilidad y el estilo atemporal. La idea surgió de un pequeño grupo de amigos y amantes de la moda que anhelaban una forma más personal de explorar el mundo de la vestimenta. Soñábamos con un lugar donde la moda vintage y las prendas previamente amadas pudieran encontrar una nueva vida y donde los amantes de la moda pudieran conectar de manera significativa.</string>
    <string name="page3"> A lo largo de los años, hemos presenciado una notable evolución en nuestro logo, que ha reflejado tanto nuestra transformación como plataforma de moda como nuestro compromiso con la innovación. Esta evolución es un testimonio de nuestro respeto por nuestra historia y pasión por la moda sostenible, al tiempo que nos impulsa hacia un futuro emocionante donde nuestro logo sigue siendo un faro de nuestra visión y compromiso en la moda. </string>


</resources>