<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ver_misp_titulo"
            android:id="@+id/tit_creacion_grupo"
            android:layout_alignParentTop="true"
            android:fontFamily="@font/simplycharming"
            android:layout_gravity="center"
            android:paddingTop="30dp"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <ImageView
                android:id="@+id/tipo_tarjeta_imagen"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/icons8_capa_100" />
            <TextView
                android:id="@+id/id_nombre_producto_etiqueta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:textSize="20sp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/etiqueta_nombre_producto" />
            <TextView
                android:id="@+id/id_nombre_producto_valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/nombre_ape_contacto_imagen"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/icons8_categor_a_100" />
            <TextView
                android:id="@+id/id_objetivo_producto_etiqueta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:textSize="20sp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/etiqueta_categoria_producto" />
            <TextView
                android:id="@+id/id_categoria_producto_valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/nombre_ape_contacto_imagen1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/icons8_camiseta_baloncesto_100" />
            <TextView
                android:id="@+id/id_marca_grupo_etiqueta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:textSize="20sp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/etiqueta_marca_producto" />
            <TextView
                android:id="@+id/id_marca_producto_valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/nombre_ape_contacto_imagen"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/icons8_precio_100"
                tools:ignore="DuplicateIds" />
            <TextView
                android:id="@+id/id_precio_grupo_etiqueta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:textSize="20sp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/etiqueta_precio_producto" />
            <TextView
                android:id="@+id/id_precio_producto_valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"
                />
        </LinearLayout>

<ImageView
    android:layout_width="250dp"
    android:layout_height="250dp"
    android:layout_gravity="center"
    android:layout_marginTop="30dp"
    android:src="@drawable/foto_datos">

</ImageView>
    </LinearLayout>



</ScrollView>
